--- a/sprint4/Kode/Foundation/index.html
+++ b/sprint4/Kode/Foundation/index.html
@@ -39,7 +39,7 @@
                 <div class="row">
                     <div class="large-3 medium-6 small-12 columns">
                         <div class="menu-option">
-                            <img src="img/skoleveien.png">
+                            <img src="img/barnehage.png">
                         </div>
                     </div>
                     <div class="large-3 medium-6 small-12 columns">
