la til salaby logo

--- a/sprint4/Kode/Foundation/index.html
+++ b/sprint4/Kode/Foundation/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="large-8 small-4 columns">
-                    <h1>Salaby</h1>
+                     <img src="img/salaby_logo_enkel_rød.png">
                 </div>
                 <div class="large-4 small-8 columns">
                     <div class="menuHeader">
