--- a/sprint4/Kode/Foundation/index.html
+++ b/sprint4/Kode/Foundation/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="large-8 small-4 columns">
-                     <img src="img/salaby_logo_enkel_rød.png">
+                     <img id="siteLogo" src="img/salaby_logo_enkel_rød.png">
                 </div>
                 <div class="large-4 small-8 columns">
                     <div class="menuHeader">
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="mainMenu">
         <div class="large-12 columns">
                 <div class="row">
                     <div class="large-3 medium-6 small-12 columns">
