--- a/sprint4/Kode/Foundation/index.html
+++ b/sprint4/Kode/Foundation/index.html
@@ -35,6 +35,7 @@
                     <input id="userField" type="text" placeholder="Brukernavn" />
                     <input id="passField" type="password" placeholder="Passord" />
                     <input id="loginBtn" type="button" class="button expand" value="Logg inn">
+                    <a href="Barn/barnForside">Alternativ link til barneforside.</a>
                 </label>
             </div>
         </div>
