--- a/sprint4/Kode/Foundation/index.html
+++ b/sprint4/Kode/Foundation/index.html
@@ -124,6 +124,7 @@
                 </div>
         
         <div id="footer" class="large-12 columns">
+            <div class="large-4 columns"></div>
             
             <div id="socialLinks" class="large-4 columns">
                 <a href="https://www.facebook.com/salaby">
