gjort endringer i filsystemet..

--- a/sprint4/Kode/Foundation/html/forsideBarn.html
+++ b/sprint4/Kode/Foundation/html/forsideBarn.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside Barn</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/foundation.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
-    <script src="js/vendor/modernizr.js"></script>
+    <script src="../js/vendor/modernizr.js"></script>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="large-8 small-4 columns">
-                     <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
+                     <img id="siteLogo" src="../img/logos/salaby_logo_enkel_rød.png">
                 </div>
                 <div class="large-4 small-8 columns">
                     <div class="menuHeader">
@@ -39,86 +39,86 @@
                 <div class="row">
                     <div class="large-3 medium-6 small-12 columns">
                         <div class="menu-option">
-                            <img src="img/barnehage.png">
+                            <img src="../img/barnehage.png">
                         </div>
                     </div>
                     <div class="large-3 medium-6 small-12 columns">
                         <div class="menu-option">
-                            <img src="img/Skoleveien.png">
+                            <img src="../img/Skoleveien.png">
                         </div>
                     </div>
                     <div class="large-3 medium-6 small-12 columns">
                         <div class="menu-option">
-                            <img src="img/kanalS.png">
+                            <img src="../img/kanalS.png">
                         </div>
                     </div>
                     <div class="large-3 medium-6 small-12 columns">
                         <div class="menu-option">
-                            <img src="img/MFL.png">
+                            <img src="../img/MFL.png">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-                <div class="row">
+                <div class="row kanalS">
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/Engelsk.png">
+                            <img src="../img/kanalS/Engelsk.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/sammfunn.png">
+                            <img src="../img/kanalS/sammfunn.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/grunnlovsjub.png">
+                            <img src="../img/kanalS/grunnlovsjub.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/historieNorge.png">
+                            <img src="../img/kanalS/historieNorge.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/historieEuropa.png">
+                            <img src="../img/kanalS/historieEuropa.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/kunst.png">
+                            <img src="../img/kanalS/kunst.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/matOghelse.png">
+                            <img src="../img/kanalS/matOghelse.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/matte.png">
+                            <img src="../img/kanalS/matte.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/naturfag.png">
+                            <img src="../img/kanalS/naturfag.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/norsk.png">
+                            <img src="../img/kanalS/norsk.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/RLE.png">
+                            <img src="../img/kanalS/RLE.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/kanalS/sammfunn.png">
+                            <img src="../img/kanalS/sammfunn.png">
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
         <!-- salaby logo -->
         <div id="footer" class="large-12 columns">
             <div id="footerLogo" class="large-4 columns">
-                <img src="img/logos/salaby_logo_enkel_grå.png">
+                <img src="../img/logos/salaby_logo_enkel_grå.png">
             </div>
             <!-- lenker i midten -->
             <div id="footerMid" class="large-6 columns">
@@ -143,18 +143,18 @@
             <!-- sosiale medier -->
             <div id="socialLinks" class="large-2 columns">
                 <a href="https://www.facebook.com/salaby">
-                    <img src="img/social/facebook_logo.png">
+                    <img src="../img/social/facebook_logo.png">
                 </a>
                 <a href="https://www.youtube.com/user/SalabyGyldendal">
-                    <img src="img/social/youtube_logo.png">
+                    <img src="../img/social/youtube_logo.png">
                 </a>
             </div>
         </div>
         <!-- FOOTER SLUTT -->
 
-        <script src="js/vendor/jquery.js"></script>
-        <script src="js/foundation.min.js"></script>
-        <script src="js/menuHeadScript.js"></script>
+        <script src="../js/vendor/jquery.js"></script>
+        <script src="../js/foundation.min.js"></script>
+        <script src="../js/menuHeadScript.js"></script>
         <script>
             $(document).foundation();
         </script>
