--- a/sprint4/Kode/Foundation/html/RLE_side.html
+++ b/sprint4/Kode/Foundation/html/RLE_side.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside Barn</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/foundation.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
-    <script src="js/vendor/modernizr.js"></script>
+    <script src="../js/vendor/modernizr.js"></script>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="large-8 small-4 columns">
-                     <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
+                     <img id="siteLogo" src="../img/logos/salaby_logo_enkel_rød.png">
                 </div>
                 <div class="large-4 small-8 columns">
                     <div class="menuHeader">
@@ -39,7 +39,7 @@
                 <div class="row">
                     <div class="large-3 medium-6 small-12 columns">
                         <div class="menu-option">
-                            <img src="img/RLE/logo_liten.png">
+                            <img src="../img/RLE/logo_liten.png">
                         </div>
                     </div>
                 </div>
@@ -48,47 +48,47 @@
                 <div class="row">
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/RLE/jøde.png">
+                            <img src="../img/RLE/jøde.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/RLE/islam.png">
+                            <img src="../img/RLE/islam.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/RLE/kristendom.png">
+                            <img src="../img/RLE/kristendom.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/RLE/hinduisme.png">
+                            <img src="../img/RLE/hinduisme.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/RLE/budd.png">
+                            <img src="../img/RLE/budd.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/RLE/sikhisme.png">
+                            <img src="../img/RLE/sikhisme.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/RLE/etikk.png">
+                            <img src="../img/RLE/etikk.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/RLE/kirke.png">
+                            <img src="../img/RLE/kirke.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
                         <div class="align-center">
-                            <img src="img/RLE/kunst2.png">
+                            <img src="../img/RLE/kunst2.png">
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
         <!-- salaby logo -->
         <div id="footer" class="large-12 columns">
             <div id="footerLogo" class="large-4 columns">
-                <img src="img/logos/salaby_logo_enkel_grå.png">
+                <img src="../img/logos/salaby_logo_enkel_grå.png">
             </div>
             <!-- lenker i midten -->
             <div id="footerMid" class="large-6 columns">
@@ -113,10 +113,10 @@
             <!-- sosiale medier -->
             <div id="socialLinks" class="large-2 columns">
                 <a href="https://www.facebook.com/salaby">
-                    <img src="img/social/facebook_logo.png">
+                    <img src="../img/social/facebook_logo.png">
                 </a>
                 <a href="https://www.youtube.com/user/SalabyGyldendal">
-                    <img src="img/social/youtube_logo.png">
+                    <img src="../img/social/youtube_logo.png">
                 </a>
             </div>
         </div>
