--- a/sprint4/Kode/Foundation/html/barn/index.html
+++ b/sprint4/Kode/Foundation/html/barn/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside Barn</title>
-    <link rel="stylesheet" href="../css/foundation.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
-    <script src="../js/vendor/modernizr.js"></script>
+    <script src="js/vendor/modernizr.js"></script>
 </head>
 
 <body>
@@ -16,11 +16,7 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="large-8 small-4 columns">
-<<<<<<< Updated upstream:sprint4/Kode/Foundation/html/forsideBarn.html
-                     <img id="siteLogo" src="../img/logos/salaby_logo_enkel_rød.png">
-=======
                     <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
->>>>>>> Stashed changes:sprint4/Kode/Foundation/index.html
                 </div>
                 <div class="large-4 small-8 columns">
                     <div class="menuHeader">
@@ -41,28 +37,6 @@
     <!--MENY-->
     <div class="row" id="mainMenu">
         <div class="large-12 columns">
-<<<<<<< Updated upstream:sprint4/Kode/Foundation/html/forsideBarn.html
-                <div class="row">
-                    <div class="large-3 medium-6 small-12 columns">
-                        <div class="menu-option">
-                            <img src="../img/barnehage.png">
-                        </div>
-                    </div>
-                    <div class="large-3 medium-6 small-12 columns">
-                        <div class="menu-option">
-                            <img src="../img/Skoleveien.png">
-                        </div>
-                    </div>
-                    <div class="large-3 medium-6 small-12 columns">
-                        <div class="menu-option">
-                            <img src="../img/kanalS.png">
-                        </div>
-                    </div>
-                    <div class="large-3 medium-6 small-12 columns">
-                        <div class="menu-option">
-                            <img src="../img/MFL.png">
-                        </div>
-=======
             <div class="row">
                 <div class="large-3 medium-6 small-12 columns">
                     <div class="menu-option">
@@ -82,81 +56,10 @@
                 <div class="large-3 medium-6 small-12 columns">
                     <div class="menu-option">
                         <img src="img/MFL.png">
->>>>>>> Stashed changes:sprint4/Kode/Foundation/index.html
                     </div>
                 </div>
             </div>
         </div>
-<<<<<<< Updated upstream:sprint4/Kode/Foundation/html/forsideBarn.html
-                <div class="row kanalS">
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/Engelsk.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/sammfunn.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/grunnlovsjub.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/historieNorge.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/historieEuropa.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/kunst.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/matOghelse.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/matte.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/naturfag.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/norsk.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/RLE.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-12 columns">
-                        <div class="align-center">
-                            <img src="../img/kanalS/sammfunn.png">
-                        </div>
-                    </div>
-                </div>
-
-        <!-- FOOTER -->
-        <!-- salaby logo -->
-        <div id="footer" class="large-12 columns">
-            <div id="footerLogo" class="large-4 columns">
-                <img src="../img/logos/salaby_logo_enkel_grå.png">
-=======
     </div>
 
     <!--KANAL S-->
@@ -164,28 +67,16 @@
         <div class="large-4 small-12 columns">
             <div class="align-center">
                 <img src="img/kanalS/Engelsk.png">
->>>>>>> Stashed changes:sprint4/Kode/Foundation/index.html
             </div>
         </div>
         <div class="large-4 small-12 columns">
             <div class="align-center">
                 <img src="img/kanalS/sammfunn.png">
             </div>
-<<<<<<< Updated upstream:sprint4/Kode/Foundation/html/forsideBarn.html
-            <!-- sosiale medier -->
-            <div id="socialLinks" class="large-2 columns">
-                <a href="https://www.facebook.com/salaby">
-                    <img src="../img/social/facebook_logo.png">
-                </a>
-                <a href="https://www.youtube.com/user/SalabyGyldendal">
-                    <img src="../img/social/youtube_logo.png">
-                </a>
-=======
         </div>
         <div class="large-4 small-12 columns">
             <div class="align-center">
                 <img src="img/kanalS/grunnlovsjub.png">
->>>>>>> Stashed changes:sprint4/Kode/Foundation/index.html
             </div>
         </div>
         <div class="large-4 small-12 columns">
@@ -264,21 +155,12 @@
     </div>
     <!-- FOOTER SLUTT -->
 
-<<<<<<< Updated upstream:sprint4/Kode/Foundation/html/forsideBarn.html
-        <script src="../js/vendor/jquery.js"></script>
-        <script src="../js/foundation.min.js"></script>
-        <script src="../js/menuHeadScript.js"></script>
-        <script>
-            $(document).foundation();
-        </script>
-=======
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/menuHeadScript.js"></script>
     <script>
     $(document).foundation();
     </script>
->>>>>>> Stashed changes:sprint4/Kode/Foundation/index.html
 </body>
 
 </html>
