Endringer i RLE siden
- lagt til id på religions bildene
- endret style.css -> lagt til id #align_center

--- a/sprint4/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint4/Kode/Foundation/Barn/RLE_side.html
@@ -47,47 +47,47 @@
         </div>
                 <div class="row">
                     <div class="large-4 small-12 columns">
-                        <div class="align-center">
+                        <div id="align_center" class="align-center">
                             <img src="img/RLE/jøde.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
-                        <div class="align-center">
+                        <div id="align_center" class="align-center">
                             <img src="img/RLE/islam.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
-                        <div class="align-center">
+                        <div id="align_center" class="align-center">
                             <img src="img/RLE/kristendom.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
-                        <div class="align-center">
+                        <div id="align_center" class="align-center">
                             <img src="img/RLE/hinduisme.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
-                        <div class="align-center">
+                        <div id="align_center" class="align-center">
                             <img src="img/RLE/budd.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
-                        <div class="align-center">
+                        <div id="align_center" class="align-center">
                             <img src="img/RLE/sikhisme.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
-                        <div class="align-center">
+                        <div id="align_center" class="align-center">
                             <img src="img/RLE/etikk.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
-                        <div class="align-center">
+                        <div id="align_center" class="align-center">
                             <img src="img/RLE/kirke.png">
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
-                        <div class="align-center">
+                        <div id="align_center" class="align-center">
                             <img src="img/RLE/kunst2.png">
                         </div>
                     </div>
