endringer i barn forside og css

--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -62,8 +62,38 @@
         </div>
     </div>
 
-    <!--KANAL S-->
-    <div class="row">
+    <!---------------BARNEHAGE FAG!!!!---------------->
+    <div class="row barnehage">
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/biblioteket.png">
+            </div>
+        </div>
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/billehagen.png">
+            </div>
+        </div>
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/musikkfilm.png">
+            </div>
+        </div>
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/TilDeVoksene.png">
+            </div>
+        </div>
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/trampoline.png">
+            </div>
+        </div>
+    </div>
+    <!---------------BARNEHAGE FAG SLUTT!!!!---------------->
+
+    <!---------------KANALS FAG!!!!---------------->
+    <div class="row kanalS ">
         <div class="large-4 small-12 columns">
             <div class="align-center">
                 <img src="img/kanalS/Engelsk.png">
@@ -125,6 +155,9 @@
             </div>
         </div>
     </div>
+    <!---------------KANALS FAG SLUTT!!!!---------------->
+
+
 
     <!-- FOOTER -->
     <!-- salaby logo -->
