hinduisme bildet er linket til hindusime siden

--- a/sprint4/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint4/Kode/Foundation/Barn/RLE_side.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="large-4 small-12 columns">
                         <div id="align_center" class="align-center">
-                            <img src="img/RLE/hinduisme.png">
+                            <a href="hinduisme.html"><img src="img/RLE/hinduisme.png"></a>
                         </div>
                     </div>
                     <div class="large-4 small-12 columns">
