forandret bildestørrelsen på noen bilder og forandret noen komentarer

--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <!--MENY-->
+    <!--!!!!!!!!!!!!!!MENY!!!!!!!!!!!!!!-->
     <div class="row" id="mainMenu">
         <div class="large-12 columns">
             <div class="row">
@@ -61,8 +61,9 @@
             </div>
         </div>
     </div>
+    <!--!!!!!!!!!!!!!!MENY SLUTT!!!!!!!!!!!!!!-->
 
-    <!---------------BARNEHAGE FAG!!!!---------------->
+    <!--!!!!!!!!!!!!!!!!!BARNEHAGE FAG!!!!!!!!!!!!!!!!!!!!!!-->
     <div class="row barnehage">
         <div class="large-4 small-12 columns">
             <div class="align-center">
@@ -90,10 +91,10 @@
             </div>
         </div>
     </div>
-    <!---------------BARNEHAGE FAG SLUTT!!!!---------------->
+    <!--!!!!!!!!!!!!!!!!BARNEHAGE FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
-    <!---------------KANALS FAG!!!!---------------->
-    <div class="row kanalS ">
+    <!--!!!!!!!!!!!!!!!!!!!!KANALS FAG!!!!!!!!!!!!!!!!!!!-->
+    <div class="row kanalS">
         <div class="large-4 small-12 columns">
             <div class="align-center">
                 <img src="img/kanalS/Engelsk.png">
@@ -155,11 +156,11 @@
             </div>
         </div>
     </div>
-    <!---------------KANALS FAG SLUTT!!!!---------------->
+    <!--!!!!!!!!!!!!!!!!!!!!KANALS FAG SLUTT!!!!!!!!!!!!!!!!!!!-->
 
 
 
-    <!-- FOOTER -->
+    <!--!!!!!!!!!!!!!!!!!!!!!!FOOTER!!!!!!!!!!!!!!!!!!!!!!!-->
     <!-- salaby logo -->
     <div id="footer" class="large-12 columns">
         <div id="footerLogo" class="large-4 columns">
@@ -186,7 +187,7 @@
             </a>
         </div>
     </div>
-    <!-- FOOTER SLUTT -->
+    <!--!!!!!!!!!!!!!!!!!!FOOTER SLUTT!!!!!!!!!!!!!!!!!!!!!!-->
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
