gjort endringer på barneseiden

--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside Barn</title>
     <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/forsideStyle.css" />
 
     <script src="js/vendor/modernizr.js"></script>
 </head>
@@ -63,7 +63,10 @@
     </div>
     <!--!!!!!!!!!!!!!!MENY SLUTT!!!!!!!!!!!!!!-->
 
+     <!--!!!!!!!!!!!!!!!!! MAIN CONTENT!!!!!!!!!!!!!!!!!!!!-->
+
     <!--!!!!!!!!!!!!!!!!!BARNEHAGE FAG!!!!!!!!!!!!!!!!!!!!!!-->
+
     <div class="row barnehage">
         <div class="large-4 small-12 columns">
             <div class="align-center">
@@ -158,11 +161,11 @@
     </div>
     <!--!!!!!!!!!!!!!!!!!!!!KANALS FAG SLUTT!!!!!!!!!!!!!!!!!!!-->
 
-
+    <!--!!!!!!!!!!!!!!!!! MAIN SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
     <!--!!!!!!!!!!!!!!!!!!!!!!FOOTER!!!!!!!!!!!!!!!!!!!!!!!-->
     <!-- salaby logo -->
-    <div id="footer" class="large-12 columns">
+    <footer id="footer" class="large-12 columns">
         <div id="footerLogo" class="large-4 columns">
             <img src="img/logos/salaby_logo_enkel_grå.png">
         </div>
@@ -185,8 +188,7 @@
             <a href="https://www.youtube.com/user/SalabyGyldendal">
                 <img src="img/social/youtube_logo.png">
             </a>
-        </div>
-    </div>
+        </footer>
     <!--!!!!!!!!!!!!!!!!!!FOOTER SLUTT!!!!!!!!!!!!!!!!!!!!!!-->
 
     <script src="js/vendor/jquery.js"></script>
