--- a/sprint4/Kode/Foundation/Voksen/voksenForside.html
+++ b/sprint4/Kode/Foundation/Voksen/voksenForside.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside Barn</title>
     <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styleVoksen.css" />
 
     <script src="js/vendor/modernizr.js"></script>
 </head>
@@ -15,17 +15,21 @@
     <div id="mainHeader">
         <div class="row">
             <div class="large-12 columns">
-                <div class="large-8 small-4 columns">
+                <div class="large-6 small-4 columns">
                     <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
                 </div>
-                <div class="large-4 small-8 columns">
+                <div class="large-6 small-8 columns">
                     <div class="menuHeader">
                         <ul>
-                            <li><a href="#">Lærer/foreldre siden</a>
+                            <li><a href="voksenForside">Hjem</a>
                             </li>
-                            <li><a href="#">Min side</a>
+                            <li><a href="#">Bestillinger</a>
                             </li>
-                            <li><a href="#">Logg ut</a>
+                            <li><a href="#">Kompetansemål</a>
+                            </li>
+                            <li><a href="informasjon">Informasjon</a>
+                            </li>
+                            <li><a href="../Barn/barnForside.html">Til Barnesiden</a>
                             </li>
                         </ul>
                     </div>
@@ -33,99 +37,59 @@
             </div>
         </div>
     </div>
-
-    <!--MENY-->
-    <div class="row" id="mainMenu">
-        <div class="large-12 columns">
-            <div class="row">
-                <div class="large-3 medium-6 small-12 columns">
-                    <div class="menu-option">
-                        <img src="img/barnehage.png">
-                    </div>
+    <div id="wrapper">
+        <!--SLIDER-->
+        <div class="row">
+            <div class="large-12 columns">
+                <aside id="promoBanner"></aside>
+            </div>
+        </div>
+        <!--OMRÅDE FOR ARTIKLER-->
+        <div class="row">
+            <div id="articleOmrade">
+                <!--KODE BLOKK FOR HVER ARTIKKEL-->
+                <div class="large-4 small-12 columns">
+                    <article>
+                        <h3>OVERSKRIFT 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+                    </article>
                 </div>
-                <div class="large-3 medium-6 small-12 columns">
-                    <div class="menu-option">
-                        <img src="img/Skoleveien.png">
-                    </div>
+                <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
+                <!--KODE BLOKK FOR HVER ARTIKKEL-->
+                <div class="large-4 small-12 columns">
+                    <article>
+                        <h3>OVERSKRIFT 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+                    </article>
                 </div>
-                <div class="large-3 medium-6 small-12 columns">
-                    <div class="menu-option">
-                        <img src="img/kanalS.png">
-                    </div>
+                <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
+                <!--KODE BLOKK FOR HVER ARTIKKEL-->
+                <div class="large-4 small-12 columns">
+                    <article>
+                        <h3>OVERSKRIFT 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+                    </article>
                 </div>
-                <div class="large-3 medium-6 small-12 columns">
-                    <div class="menu-option">
-                        <img src="img/MFL.png">
-                    </div>
+                <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
+                <!--KODE BLOKK FOR HVER ARTIKKEL-->
+                <div class="large-4 small-12 columns">
+                    <article>
+                        <h3>OVERSKRIFT 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+                    </article>
                 </div>
+                <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
+                <!--KODE BLOKK FOR HVER ARTIKKEL-->
+                <div class="large-8 small-12 columns">
+                    <article>
+                        <h3>OVERSKRIFT 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+                    </article>
+                </div>
+                <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
             </div>
         </div>
     </div>
-
-    <!--KANAL S-->
-    <div class="row kanals">
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/Engelsk.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/sammfunn.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/grunnlovsjub.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/historieNorge.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/historieEuropa.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/kunst.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/matOghelse.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/matte.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/naturfag.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/norsk.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/RLE.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/kanalS/sammfunn.png">
-            </div>
-        </div>
-    </div>
-
     <!-- FOOTER -->
     <!-- salaby logo -->
     <div id="footer" class="large-12 columns">
@@ -159,7 +123,7 @@
     <script src="js/foundation.min.js"></script>
     <script src="js/menuHeadScript.js"></script>
     <script>
-    $(document).foundation();
+        $(document).foundation();
     </script>
 </body>
 
