--- a/sprint4/Kode/Foundation/Voksen/omSalaby.html
+++ b/sprint4/Kode/Foundation/Voksen/omSalaby.html
@@ -47,11 +47,11 @@
         <div class="row">
             <div class="large-12 columns">
                 <nav class="breadcrumbs">
-                  <a href="#">Informasjon</a>
-                  <a class="current" href="#">Om salaby</a>
-                  <a class="unavailable" href="#">Om Skolevein 1-2 Trinn</a>
-                  <a class="unavailable" href="#">Om Byparken 3-5 Trinn</a>
-                  <a class="unavailable" href="#">Om KanalS 5-7 Trinn</a>
+                  <a href="informasjon">Informasjon</a>
+                  <a class="current" href="omSalaby">Om salaby</a>
+                  <a class="unavailable" href="omSkoleveien">Om Skolevein 1-2 Trinn</a>
+                  <a class="unavailable" href="omByparken">Om Byparken 3-5 Trinn</a>
+                  <a class="unavailable" href="omKanalS">Om KanalS 5-7 Trinn</a>
                 </nav>
             </div>
         </div>
