--- a/sprint4/Kode/Foundation/Voksen/voksenForside.html
+++ b/sprint4/Kode/Foundation/Voksen/voksenForside.html
@@ -51,6 +51,7 @@
                 <div class="large-4 small-12 columns">
                     <article>
                         <h3>OVERSKRIFT 1</h3>
+                        <img class="articleImg" src="img/RLE/budd.png" />
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
                     </article>
                 </div>
@@ -59,6 +60,7 @@
                 <div class="large-4 small-12 columns">
                     <article>
                         <h3>OVERSKRIFT 2</h3>
+                        <img class="articleImg" src="img/RLE/budd.png" />
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
                     </article>
                 </div>
@@ -67,6 +69,7 @@
                 <div class="large-4 small-12 columns">
                     <article>
                         <h3>OVERSKRIFT 3</h3>
+                        <img class="articleImg" src="img/RLE/budd.png" />
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
                     </article>
                 </div>
@@ -75,6 +78,7 @@
                 <div class="large-4 small-12 columns">
                     <article>
                         <h3>OVERSKRIFT 3</h3>
+                        <img class="articleImg" src="img/RLE/budd.png" />
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
                     </article>
                 </div>
@@ -83,6 +87,7 @@
                 <div class="large-8 small-12 columns">
                     <article>
                         <h3>OVERSKRIFT 3</h3>
+                        <img class="articleImg" src="img/RLE/budd.png" />
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
                     </article>
                 </div>
