--- a/sprint4/Kode/Foundation/index.html
+++ b/sprint4/Kode/Foundation/index.html
@@ -12,38 +12,51 @@
 
 <body>
 
-
+    <!--ADULT SECTION-->
     <div id="adultSection">
-        <a href="#"><img src="img/klasserom2.svg"></a>
+        <div class="overlay">
+            <a href="Voksen/voksenForside">Til voksensiden</a>
+        </div>
+        <a href="Voksen/voksenForside">
+            <img src="img/klasserom2.svg">
+        </a>
     </div>
 
+    <!--CHILD SECTION-->
     <div id="childSection">
-    <div class="row">
-        <div class="large-6 columns">
-        <h2>Velkommen til Salaby</h2>
+        <div class="row">
+            <div class="large-6 columns">
+                <h2>Velkommen til Salaby</h2>
+            </div>
+        </div>
+        <div id="row">
+            <div class="large-6 columns">
+                <label>Innlogging
+                    <input id="userField" type="text" placeholder="Brukernavn" />
+                    <input id="passField" type="password" placeholder="Passord" />
+                    <input id="loginBtn" type="button" class="button expand" value="Logg inn">
+                </label>
+            </div>
+        </div>
     </div>
-    </div>
-    <div id="row">
-    <div class="large-6 columns">
-      <label> Innlogging
-        <input id="userField" type="text" placeholder="Brukernavn" />
-        <input id="passField" type="password" placeholder="Passord" />
-        <input id="loginBtn" type="button" class="button expand" value="Logg inn">
-      </label>
-    </div>
+    <div id="personPos">
+        <div class="row">
+            <div class="large-12 columns">
+                <img src="img/Emre_1.png">
+            </div>
         </div>
     </div>
 
 
 
-        <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-        <script src="../js/loginBtnShow.js"></script>
-        <script src="js/vendor/jquery.js"></script>
-        <script src="js/foundation.min.js"></script>
-        <script src="js/menuHeadScript.js"></script>
-        <script>
-            $(document).foundation();
-        </script>
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="../js/loginBtnShow.js"></script>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script src="js/menuHeadScript.js"></script>
+    <script>
+        $(document).foundation();
+    </script>
 </body>
 
 </html>
