--- a/sprint4/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint4/Kode/Foundation/Barn/hinduisme.html
@@ -34,12 +34,18 @@
         </div>
     </div>
 
+    <section id="test">
     <div class="row" id="mainMenu">
         <div class="large-12 columns">
             <div class="row">
                 <div class="large-3 medium-6 small-12 columns">
                     <div class="menu-option">
                         <img src="./img/RLE/logo_liten.png">
+                    </div>
+                </div>
+                <div class="large-3 medium-6 small-12 columns">
+                    <div class="menu-option">
+                        <a href="./RLE_SIDE.html"><img src="./img/arrowback.png"></a>
                     </div>
                 </div>
             </div>
@@ -81,12 +87,11 @@
         </div>
     </div>
     </div>
-
-    <!-- FOOTER -->
-    <!-- salaby logo -->
-    <div id="footer" class="large-12 columns">
+    </section>
+   <!-- Footer -->
+ <footer id="footer" class="large-12 columns">
         <div id="footerLogo" class="large-4 columns">
-            <img src="./img/logos/salaby_logo_enkel_grå.png">
+            <img src="img/logos/salaby_logo_enkel_grå.png">
         </div>
         <!-- lenker i midten -->
         <div id="footerMid" class="large-6 columns">
@@ -102,13 +107,13 @@
         <!-- sosiale medier -->
         <div id="socialLinks" class="large-2 columns">
             <a href="https://www.facebook.com/salaby">
-                <img src="./img/social/facebook_logo.png">
+                <img src="img/social/facebook_logo.png">
             </a>
             <a href="https://www.youtube.com/user/SalabyGyldendal">
-                <img src="./img/social/youtube_logo.png">
+                <img src="img/social/youtube_logo.png">
             </a>
-        </div>
-    </div>
+        </footer>
+
     <!-- FOOTER SLUTT -->
 
     <script src="./js/vendor/jquery.js"></script>
@@ -116,6 +121,7 @@
     <script src="./js/menuHeadScript.js"></script>
     <script>
     $(document).foundation();
+
     </script>
 </body>
 
