--- a/sprint4/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint4/Kode/Foundation/Barn/RLE_side.html
@@ -34,17 +34,22 @@
         </div>
     </div>
 
-    <div class="row" id="mainMenu">
+   <div class="row" id="mainMenu">
         <div class="large-12 columns">
-                <div class="row">
-                    <div class="large-3 medium-6 small-12 columns">
-                        <div class="menu-option">
-                            <img src="img/RLE/logo_liten.png">
-                        </div>
+            <div class="row">
+                <div class="large-3 medium-6 small-12 columns">
+                    <div class="menu-option">
+                        <img src="./img/RLE/logo_liten.png">
+                    </div>
+                </div>
+                <div class="large-3 medium-6 small-12 columns">
+                    <div class="menu-option">
+                        <a href="./RLE_SIDE.html"><img src="./img/arrowback.png"></a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
                 <div class="row">
                     <div class="large-4 small-12 columns">
                         <div id="align_center" class="align-center">
@@ -92,7 +97,6 @@
                         </div>
                     </div>
                 </div>
-
         <!-- FOOTER -->
     <!-- salaby logo -->
     <div id="footer" class="large-12 columns">
