linker til barnforside, når man trykker på pilen

--- a/sprint4/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint4/Kode/Foundation/Barn/RLE_side.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="large-3 medium-6 small-12 columns">
                     <div class="menu-option">
-                        <a href="./RLE_SIDE.html"><img src="./img/arrowback.png"></a>
+                        <a href="./barnforside.html"><img src="./img/arrowback.png"></a>
                     </div>
                 </div>
             </div>
