fiksa footer og annet

--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -64,7 +64,7 @@
     <!--!!!!!!!!!!!!!!MENY SLUTT!!!!!!!!!!!!!!-->
 
      <!--!!!!!!!!!!!!!!!!! MAIN CONTENT!!!!!!!!!!!!!!!!!!!!-->
-
+     <div id="wrapper">
     <!--!!!!!!!!!!!!!!!!!BARNEHAGE FAG!!!!!!!!!!!!!!!!!!!!!!-->
 
     <div class="row barnehage">
@@ -160,7 +160,7 @@
         </div>
     </div>
     <!--!!!!!!!!!!!!!!!!!!!!KANALS FAG SLUTT!!!!!!!!!!!!!!!!!!!-->
-
+    </div>
     <!--!!!!!!!!!!!!!!!!! MAIN SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
     <!--!!!!!!!!!!!!!!!!!!!!!!FOOTER!!!!!!!!!!!!!!!!!!!!!!!-->
