--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -38,22 +38,22 @@
     <div class="row" id="mainMenu">
         <div class="large-12 columns">
             <div class="row">
-                <div class="large-3 medium-6 small-12 columns">
+                <div id="barnehageButton" class="large-3 medium-6 small-12 columns">
                     <div class="menu-option">
                         <img src="img/barnehage.png">
                     </div>
                 </div>
-                <div class="large-3 medium-6 small-12 columns">
+                <div id="skoleveienButton" class="large-3 medium-6 small-12 columns">
                     <div class="menu-option">
                         <img src="img/Skoleveien.png">
                     </div>
                 </div>
-                <div class="large-3 medium-6 small-12 columns">
+                <div id="kanalSButton" class="large-3 medium-6 small-12 columns">
                     <div class="menu-option">
                         <img src="img/kanalS.png">
                     </div>
                 </div>
-                <div class="large-3 medium-6 small-12 columns">
+                <div id="MFLButton" class="large-3 medium-6 small-12 columns">
                     <div class="menu-option">
                         <img src="img/MFL.png">
                     </div>
@@ -194,6 +194,7 @@
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/menuHeadScript.js"></script>
+    <script src="js/showDivsScript.js"></script>
     <script>
     $(document).foundation();
     </script>
