--- a/sprint4/Kode/Foundation/Voksen/voksenForside.html
+++ b/sprint4/Kode/Foundation/Voksen/voksenForside.html
@@ -23,9 +23,9 @@
                         <ul>
                             <li><a href="voksenForside">Hjem</a>
                             </li>
-                            <li><a href="#">Bestillinger</a>
+                            <li><a href="bestilling">Bestillinger</a>
                             </li>
-                            <li><a href="#">Kompetansemål</a>
+                            <li><a href="kompetanse">Kompetansemål</a>
                             </li>
                             <li><a href="informasjon">Informasjon</a>
                             </li>
@@ -46,9 +46,15 @@
         </div>
         <!--OMRÅDE FOR ARTIKLER-->
         <div class="row">
+        <div class="large-12 columns">
+            <h1>Nyheter</h1>
+            </div>
+        </div>
+        <div class="row">
             <div id="articleOmrade">
                 <!--KODE BLOKK FOR HVER ARTIKKEL-->
                 <div class="large-4 small-12 columns">
+                    
                     <article>
                         <h3>OVERSKRIFT 1</h3>
                         <img class="articleImg" src="img/RLE/budd.png" />
