--- a/sprint4/Kode/Foundation/Voksen/omKanalS.html
+++ b/sprint4/Kode/Foundation/Voksen/omKanalS.html
@@ -23,9 +23,9 @@
                         <ul>
                             <li><a href="voksenForside">Hjem</a>
                             </li>
-                            <li><a href="#">Bestillinger</a>
+                            <li><a href="bestilling">Bestillinger</a>
                             </li>
-                            <li><a href="#">Kompetansemål</a>
+                            <li><a href="kompetanse">Kompetansemål</a>
                             </li>
                             <li><a href="informasjon">Informasjon</a>
                             </li>
