--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -21,7 +21,7 @@
                 <div class="large-4 small-8 columns">
                     <div class="menuHeader">
                         <ul>
-                            <li><a href="#">Lærer/foreldre siden</a>
+                            <li><a href="../voksen/voksenForside.html">Lærer/foreldre siden</a>
                             </li>
                             <li><a href="#">Min side</a>
                             </li>
