--- a/sprint4/Kode/Foundation/Voksen/voksenForside.html
+++ b/sprint4/Kode/Foundation/Voksen/voksenForside.html
@@ -25,7 +25,7 @@
                             </li>
                             <li><a href="bestilling">Bestillinger</a>
                             </li>
-                            <li><a href="kompetanse">Kompetansemål</a>
+                            <li><a href="kompetanse#engelskAco">Kompetansemål</a>
                             </li>
                             <li><a href="informasjon">Informasjon</a>
                             </li>
