--- a/sprint4/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint4/Kode/Foundation/Barn/hinduisme.html
@@ -16,7 +16,8 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="large-8 small-4 columns">
-                    <img id="siteLogo" src="./img/logos/salaby_logo_enkel_rød.png">
+                    <a href="barnForside.html"><img id="siteLogo" src="./img/logos/salaby_logo_enkel_rød.png">
+                    </a>
                 </div>
                 <div class="large-4 small-8 columns">
                     <div class="menuHeader">
