gjort masse endringer med animasjoner...

--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -35,7 +35,7 @@
     </div>
 
     <!--!!!!!!!!!!!!!!MENY!!!!!!!!!!!!!!-->
-    <div class="row" id="mainMenu">
+    <div class="row menu">
         <div class="large-12 columns">
             <div class="row">
                 <div id="barnehageButton" class="large-3 medium-6 small-12 columns">
@@ -63,8 +63,39 @@
     </div>
     <!--!!!!!!!!!!!!!!MENY SLUTT!!!!!!!!!!!!!!-->
 
+        <!--!!!!!!!!!!!!!!!!SKOLEVEIEN MENY!!!!!!!!!!!!!!!!!!!!-->
+    <div class="row menu" id="skoleveienMenu">
+        <div class="large-12 columns">
+            <div class="row">
+                <div id="barnehageButton" class="large-3 medium-6 small-12 columns">
+                    <div class="menu-option">
+                        <img src="img/undermenySkoleVeien/1-2.png">
+                    </div>
+                </div>
+                <div id="skoleveienButton" class="large-3 medium-6 small-12 columns">
+                    <div class="menu-option">
+                        <img src="img/undermenySkoleVeien/3-4.png">
+                    </div>
+                </div>
+                <div id="kanalSButton" class="large-3 medium-6 small-12 columns">
+                    <div class="menu-option">
+                        <img src="img/undermenySkoleVeien/morsmål.png">
+                    </div>
+                </div>
+                <div id="MFLButton" class="large-3 medium-6 small-12 columns">
+                    <div class="menu-option">
+                        <img src="img/undermenySkoleVeien/skolestart.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!--!!!!!!!!!!!!!!!!SKOLEVEIEN MENY SLUTT!!!!!!!!!!!!!!!!!!!!-->
+
      <!--!!!!!!!!!!!!!!!!! MAIN CONTENT!!!!!!!!!!!!!!!!!!!!-->
-     <div id="wrapper">
+    <div id="wrapper">
     <!--!!!!!!!!!!!!!!!!!BARNEHAGE FAG!!!!!!!!!!!!!!!!!!!!!!-->
 
     <div class="row barnehage">
