--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -181,7 +181,9 @@
         </div>
         <div class="large-4 small-12 columns">
             <div class="align-center">
+                <a href="RLE_side.html">
                 <img src="img/kanalS/RLE.png">
+                </a>
             </div>
         </div>
         <div class="large-4 small-12 columns">
