jobbet med anaimasjoner

--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -97,7 +97,6 @@
      <!--!!!!!!!!!!!!!!!!! MAIN CONTENT!!!!!!!!!!!!!!!!!!!!-->
     <div id="wrapper">
     <!--!!!!!!!!!!!!!!!!!BARNEHAGE FAG!!!!!!!!!!!!!!!!!!!!!!-->
-
     <div class="row barnehage">
         <div class="large-4 small-12 columns">
             <div class="align-center">
@@ -193,6 +192,40 @@
         </div>
     </div>
     <!--!!!!!!!!!!!!!!!!!!!!KANALS FAG SLUTT!!!!!!!!!!!!!!!!!!!-->
+
+    <!--!!!!!!!!!!!!!!!!!MFL FAG!!!!!!!!!!!!!!!!!!!!!!-->
+    <div class="row MFL">
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/biblioteket.png">
+            </div>
+        </div>
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/billehagen.png">
+            </div>
+        </div>
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/musikkfilm.png">
+            </div>
+        </div>
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/TilDeVoksene.png">
+            </div>
+        </div>
+        <div class="large-4 small-12 columns">
+            <div class="align-center">
+                <img src="img/barnehage/trampoline.png">
+            </div>
+        </div>
+    </div>
+    <!--!!!!!!!!!!!!!!!!MFL FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
+
+
+
+
     </div>
     <!--!!!!!!!!!!!!!!!!! MAIN SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
